fix: form styles on dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,10 @@ body.dark {
   ._servicesList_1r89x_40 {
     color: #000000;
   }
+
+  ._hotelForm_1xd4k_1 {
+    color: #000000;
+  }
 }
 
 
